# reCamera_Pro_C_SDK

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  private_src
cmake/: FindMPP.cmake  FindRGA.cmake  FindRKAIQRuntime.cmake  FindRKNNRuntime.cmake  reCamera_Pro_SDK-config.cmake.in  toolchain-aarch64.cmake  toolchain-arm.cmake  version.h.in
docs/: architecture.md  cross_compilation.md  getting_started.md
examples/: CMakeLists.txt
examples/camera_preview/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/capture_image/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/gpio_control/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/hello_world/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/imu_read/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/isp_control/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/onvif_server/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/record_video/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/rknn_yolo/: CMakeLists.txt  README.md  README_zh.md  main.cpp  main.cpp.orig  udp_receiver.py
examples/rtmp_push/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/rtsp_server/: CMakeLists.txt  README.md  README_zh.md  main.cpp
examples/uart_echo/: CMakeLists.txt  README.md  README_zh.md  main.cpp
include/rv1126b/: adc.hpp  audio.hpp  camera.hpp  config.hpp  encoder.hpp  error.hpp  gpio.hpp  i2c.hpp  imu.hpp  isp.hpp  logger.hpp  netconfig.hpp  npu.hpp  onvif_server.hpp  pwm.hpp  recorder.hpp  rtmp_pusher.hpp  rtsp.hpp  rv1126b.hpp  spi.hpp  sysinfo.hpp  tensor.hpp  uart.hpp  utils.hpp  version.hpp  watchdog.hpp
include/rv1126b/audio/: audio.hpp
include/rv1126b/camera/: camera.hpp
include/rv1126b/core/: config.hpp  error.hpp  logger.hpp  utils.hpp
include/rv1126b/isp/: isp.hpp
include/rv1126b/network/: netconfig.hpp
include/rv1126b/npu/: npu.hpp  tensor.hpp
include/rv1126b/peripheral/: adc.hpp  gpio.hpp  i2c.hpp  pwm.hpp  spi.hpp  uart.hpp
include/rv1126b/sensor/: imu.hpp
include/rv1126b/stream/: onvif.hpp  rtmp.hpp  rtsp.hpp
include/rv1126b/system/: sysinfo.hpp  watchdog.hpp
include/rv1126b/video/: encoder.hpp  recorder.hpp
lib/: libreCamera_pro_sdk.so.1  libreCamera_pro_sdk.so.1.0.0
scripts/: build.sh
sysroot/oem/usr/include/rknn/: rknn_api.h
sysroot/oem/usr/include/rockchip/: mpp_frame.h
sysroot/oem/usr/lib/: librockchip_mpp.so.1
sysroot/usr/lib/: librtmp.so.1
tests/scratch/: run_tests.sh  run_tests_v2.sh  scratch_test_rknn.cpp  scratch_test_yolo.cpp  test_on_device.sh  test_on_device_v2.sh
tools/: demo_env.sh  deploy.sh  device_info.sh  update_driver.sh
